--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,1 +1,7 @@
-<h1>Welcome!</h1>
+<div class="banner">
+  <div class="container">
+    <div class="text-center">
+      <h1><%=@list.name%>!</h1>
+    </div>
+  </div>
+</div>
