--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -1,4 +1,13 @@
-<%= simple_form_for [@list, @bookmark] do |f| %>
-  <%= f.input :comment %>
-  <%= f.submit "Submit bookmark", class: "btn btn-primary"%>
-<% end %>
+<div class="conainter mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="mb-3">
+        <%= simple_form_for [@list, @bookmark] do |f| %>
+        <%= f.input :comment, placeholder: "Enter a comment about the movie" %>
+        <%= f.association :movie, prompt: "Select a movie", input_html: {data: {controller: "tom-select"}}%>
+        <%= f.submit "Submit bookmark", class: "btn btn-success"%>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
