--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,5 +1,13 @@
-<%= simple_form_for @list do |f| %>
-  <%= f.input :name %>
-  <%= f.input :photo, as: :file %>
-  <%= f.submit "Submit List", class: "btn btn-primary"%>
-<% end %>
+<div class="conainter mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="mb-3">
+        <%= simple_form_for @list do |f| %>
+          <%= f.input :name %>
+          <%= f.input :photo, as: :file %>
+          <%= f.submit "Submit List", class: "btn btn-primary"%>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
