--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,29 +2,32 @@
   <h1 class="text-white text-center"><%= @list.name %>!</h1>
 </div>
 
-<div class="container">
+<div class="container show-card">
   <div class="d-flex align-items-end flex-column mt-2">
     <div>
       <%= link_to 'Add a movie', new_list_bookmark_path(@list), class: "btn btn-success" %>
     </div>
   </div>
-  <div>
-  <% @list.movies.each do |movie| %>
-    <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
-      <div class="card shadow-sm rounded mb-4">
-        <%= image_tag movie.poster_url, alt: movie.title, class: "card-img-top rounded-top" %>
-        <div class="card-body">
-          <h5 class="card-title">
-            <%= movie.title %>
-            <span class="text-muted font-weight-normal">• <%= movie.rating %> <i class="fas fa-star star-yellow"></i></span>
-          </h5>
-          <p class="card-text text-muted"><%= movie.overview %></p>
-          <div class="d-flex justify-content-between align-items-center">
-            <small class="text-muted"><i class="fas fa-quote-left me-2"></i><%= bookmark.comment %></small>
-            <%= link_to "Delete", bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove #{movie.title} from your #{@list.name} list?" }, class: "btn btn-outline-danger btn-sm" %>
+
+  <div class="row">
+    <% @list.movies.each do |movie| %>
+      <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
+        <div class="col-lg-6 col-md-6 col-sm-12 text-center">
+          <div class="card w-50">
+            <%= image_tag movie.poster_url, alt: movie.title, class: "card-img-top rounded-top" %>
+            <div class="card-body">
+              <h5 class="card-title">
+                <%= movie.title %>
+                <span class="text-muted font-weight-normal">• <%= movie.rating %> <i class="fas fa-star star-yellow"></i></span>
+              </h5>
+              <p class="card-text text-muted"><%= movie.overview %></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted"><i class="fas fa-quote-left me-2"></i><%= bookmark.comment %></small>
+                <%= link_to "Delete", bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove #{movie.title} from your #{@list.name} list?" }, class: "btn btn-outline-danger btn-sm" %>
+              </div>
+            </div>
           </div>
-      </div>
-    </div>
+        </div>
     <% end %>
   </div>
 </div>
